@@ -14,14 +14,14 @@ capplets/accessibility/keyboard/accessibility-keyboard.c
 capplets/accessibility/keyboard/accessibility-keyboard.desktop.in.in
 capplets/accessibility/keyboard/gnome-accessibility-keyboard-properties.c
 capplets/accessibility/keyboard/gnome-accessibility-keyboard-properties.glade
-capplets/appearance/appearance.glade
 capplets/appearance/appearance-desktop.c
 capplets/appearance/appearance-font.c
 capplets/appearance/appearance-main.c
 capplets/appearance/appearance-themes.c
-capplets/appearance/gnome-appearance-properties.desktop.in.in
-capplets/appearance/gnome-theme-installer.desktop.in.in
-capplets/appearance/gnome-theme-package.xml.in
+capplets/appearance/data/appearance.glade
+capplets/appearance/data/gnome-appearance-properties.desktop.in.in
+capplets/appearance/data/gnome-theme-installer.desktop.in.in
+capplets/appearance/data/gnome-theme-package.xml.in
 capplets/appearance/gnome-wp-info.c
 capplets/appearance/gnome-wp-item.c
 capplets/appearance/theme-installer.c
