@@ -1,3 +1,7 @@
+2007-07-24  Thomas Wood  <thos@gnome.org>
+
+	* POTFILES.in: Update for recent appearance re-organisation
+
 2007-07-24  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Estonian translation update by Ivar Smolin.
